--- a/index.ipynb
+++ b/index.ipynb
@@ -214,7 +214,8 @@
    "outputs": [],
    "source": [
     "names_and_ranks = []\n",
-    "for rank in city_indices\n",
+    "for rank in city_indices:\n",
+    "    names_and_ranks.append\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
