--- a/index.ipynb
+++ b/index.ipynb
@@ -224,8 +224,7 @@
    "source": [
     "names_and_ranks = []\n",
     "for rank in city_indices:\n",
-    "    names_and_ranks.append(\"{}. {}\".format(rank,city_names[rank])\n",
-    "# write a for loop that adds the properly formatted string to the names_and_ranks list"
+    "    names_and_ranks.append(\"{}. {}\".format(rank,city_names[rank])\n"
    ]
   },
   {
