automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -209,22 +209,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-8-fa66cab4967f>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-fa66cab4967f>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    # write a for loop that adds the properly formatted string to the names_and_ranks list\u001b[0m\n\u001b[0m                                                                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "names_and_ranks = []\n",
     "for rank in city_indices:\n",
-    "    names_and_ranks.append(\"{}. {}\".format(rank,city_names[rank])\n"
+    "    names_and_ranks.append(\"{}. {}\".format(rank,city_names[rank]))\n"
    ]
   },
   {
