--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
    "source": [
     "names_and_ranks = []\n",
     "for rank in city_indices:\n",
-    "    names_and_ranks.append(\"{}. {}\".format(rank,city_names[rank]))\n"
+    "    names_and_ranks.append(\"{}. {}\".format(rank+1,city_names[rank]))\n"
    ]
   },
   {
