--- a/index.ipynb
+++ b/index.ipynb
@@ -220,22 +220,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'11. Iguazu Falls'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "names_and_ranks[0] # '1. Buenos Aires'\n"
+    "names_and_ranks[0] # '1. Buenos Aires'\n",
+    "names_and_ranks[1] # '2. Toronto'\n",
+    "names_and_ranks[-1] # '12. Iguazu Falls'"
    ]
   },
   {
