--- a/index.ipynb
+++ b/index.ipynb
@@ -252,7 +252,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_populations = []\n"
+    "city_populations = []\n",
+    "for population in ci"
    ]
   },
   {
