--- a/index.ipynb
+++ b/index.ipynb
@@ -253,7 +253,8 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for population in city_indices:"
+    "for population in city_indices:\n",
+    "    "
    ]
   },
   {
