automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,7 @@
    "source": [
     "city_populations = []\n",
     "for population in city_indices:\n",
-    "    city_population"
+    "    city_population.append()"
    ]
   },
   {
