--- a/index.ipynb
+++ b/index.ipynb
@@ -253,7 +253,7 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for population in city_indices:\n",
+    "for i in city_indices:\n",
     "    city_population.append()"
    ]
   },
