--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,7 @@
    "source": [
     "city_populations = []\n",
     "for i in city_indices:\n",
-    "    city_population.append(cities[i])"
+    "    city_population.append(cities[i]['Population'])"
    ]
   },
   {
