--- a/index.ipynb
+++ b/index.ipynb
@@ -398,7 +398,8 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for i in city_indices:"
+    "for i in city_indices:\n",
+    "    city_areas.append()"
    ]
   },
   {
