--- a/index.ipynb
+++ b/index.ipynb
@@ -399,7 +399,7 @@
    "source": [
     "city_areas = []\n",
     "for i in city_indices:\n",
-    "    city_areas.append()"
+    "    city_areas.append(cities[i]['Area'])"
    ]
   },
   {
