--- a/index.ipynb
+++ b/index.ipynb
@@ -392,13 +392,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "city_areas = []\n",
     "for i in city_indices:\n",
-    "    city_areas.append(cities[i]['Area'])"
+    "    city_areas.append(cities[i]['Area']*100000)"
    ]
   },
   {
